--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend of Casa Bianco's web page",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register 'test/**/*.test.ts' --timeout 20000 --exit",
     "dev": "ts-node-dev --respawn ./src/index.ts",
     "start": "node ./dist/index.js",
     "watch": "tsc --watch",
@@ -28,12 +28,18 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.1",
+    "@types/chai": "^4.2.22",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.3",
+    "@types/supertest": "^2.0.11",
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
+    "mocha": "^9.1.2",
+    "supertest": "^6.1.6",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.3"
