--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.37",
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.11",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
