--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.9",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "pg": "^8.7.1",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/mercadopago": "^1.5.6",
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
