--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Backend of Casa Bianco's web page",
+  "description": "Backend of eCommerce's web page",
   "main": "index.ts",
   "scripts": {
     "test": "mocha --require ts-node/register 'test/**/*.test.ts' --timeout 20000 --exit",
@@ -10,7 +10,7 @@
     "watch": "tsc --watch",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config dist/typeorm/config/ormconfig.js"
   },
-  "author": "Gonzapepe & matiasrivero-ctrl",
+  "author": "Gonzapepe",
   "license": "ISC",
   "dependencies": {
     "@types/validator": "^13.6.3",
