Refactoring: access token is now inside .env

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ POSTGRES_DB = database_test
 
 JWT_EXPIRATION = 50m
 JWT_SECRET = asodiqweoijqweOIJQWRIO813241982
+
+MP_ACCESS_TOKEN = TEST-... // Access token of mercadopago API
